# opengl_cmake_template

./: .gitignore  CMakeLists.txt
cmake/: Libraries.cmake
src/: main.cpp
src/engine/: Window.cpp  Window.hpp
src/util/: RootDir.h
